src/style/style.css
/* ... */
.content.container {
  display: flex;
  flex-grow: 1;
  overflow-y: hidden;
}

.sidebar.container {
  position: fixed;
  display: flex;
  flex-direction: column;
  background-color: #6ba181;
  padding: 16px;
  min-width: 220px;
  width: 300px;
  height: calc(100% - 152px);
  box-shadow: 0px 5px 2px 0 #386955 inset;
  font-family: "KauShanScript";
  left: 0;
  z-index: 1;
}

.sidebar.expand-btn {
  position: absolute;
  right: -16px;
  top: calc(50% - 32px);
  background-color: #6ba181;
  border-radius: 0 12px 12px 0;
  height: 64px;
  width: 16px;
  cursor: pointer;
  display: none;
}

.sidebar.top-panel {
  align-self: normal;
  padding-bottom: 16px;
  border-bottom: 2px solid #a6ddd4;
}

.sidebar.text {
  font-size: 2.25rem;
  font-weight: bold;
  color: #f0c987;
  text-shadow: 2px 2px 2px #386955;
}

.sidebar.project-item-list {
  display: flex;
  flex-direction: column;
  margin: 8px 0;
  padding: 4px;
  gap: 8px;
  overflow-y: auto;
}

.sidebar.project-item {
  color: #dcfcce;
  /* text-align: center; */
  border-radius: 8px;
  padding: 8px 14px;
  font-size: 1.5rem;
}

.sidebar.project-item:hover {
  cursor: pointer;
  color: #ffd51a;
  text-shadow: 2px 2px 2px #386955;
  background-color: #89bd9e;
}

.sidebar.project-item:active {
  background-color: transparent;
  color: #dbb819;
  text-shadow: none;
}

.sidebar.project-item.selected {
  color: white;
  text-shadow: 2px 2px 2px #8b1f15;
  background-color: #db4c40;
}

.sidebar.project-item.selected:hover {
  color: #ffd51a;
  background-color: #f55647;
}

.sidebar.project-item.selected:active {
  color: #dbb819;
  text-shadow: none;
  background-color: #db4c40;
}

.top-panel {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.bottom-panel {
  display: flex;
  gap: 4px;
  justify-content: end;
}

.btn-panel {
  display: flex;
  align-items: center;
  gap: 8px;
}

.top-panel > .btn-panel > .btn {
  box-shadow: 2px 2px 0px 0px #911d13;
}

.top-panel > .btn-panel > .btn:active {
  transform: translate(2px, 2px);
  box-shadow: none;
}

.btn {
  border: none;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #ffd51a;
  padding: 8px;
  border-radius: 6px;
  color: #3c153b;
  font-size: 18px;
  font-weight: bold;
  text-shadow: 1px 1px 0px #b89600;
  box-shadow: 2px 2px 0 0 rgba(0, 0, 0, 40%);
}

.btn:hover {
  cursor: pointer;
  background-color: #ffe260;
}

.btn:active {
  background-color: #ffd51a;
  color: #1b051b;
  text-shadow: none;
  transform: translate(2px, 2px);
  box-shadow: none;
}

.add-project.btn {
  height: 42px;
  width: 42px;
  color: #1cff41;
  text-shadow: 1px 1px 1px #386955;
  box-shadow: none;
  background-color: transparent;
  border-radius: 16px;
  font-size: 32px;
}

.add-project.btn:hover {
  background-color: #89bd9e;
}

.add-project.btn:active {
  color: #17c734;
  text-shadow: none;
  background-color: transparent;
}

.project.area {
  display: flex;
  margin-left: 332px;
  justify-content: center;
  flex-grow: 1;
  box-shadow: 0 5px 2px 0px #be7303 inset;
  overflow-y: scroll;
}

.add-todo.btn > i,
.delete-project.btn,
.change-name-project.btn {
  font-size: 24px;
}

.btn.fa-check {
  font-size: 24px;
  color: green;
}

.add-todo.btn {
  display: flex;
  align-items: center;
  gap: 4px;
}

.modal.close.btn,
.delete-todo.btn {
  font-size: 28px;
  color: red;
}

.modal.close.btn,
.expand-todo.btn,
.edit-todo.btn,
.delete-todo.btn {
  padding: 0;
  height: 35px;
  width: 35px;
}

.modal.close.btn:hover,
.modal.close.btn:focus {
  cursor: pointer;
}

.project.container {
  display: flex;
  flex-direction: column;
  align-self: flex-start;
  margin: 48px 0;
  background-color: #89bd9e;
  border-radius: 16px;
  overflow: hidden;
  box-shadow: 5px 5px 3px 0 #be7303;
}

.project.top-panel {
  gap: 8px;
  padding: 8px 16px;
  background-color: #db4c40;
  border-radius: 16px 16px 0 0;
  box-shadow: 0px 0px 6px 2px #386955;
}

.project.name {
  font-size: 2.25rem;
  font-family: "KauShanScript";
  width: 700px;
  border: none;
  outline: none;
  text-overflow: ellipsis;
}

.project.name:disabled {
  color: white;
  text-shadow: 2px 2px 2px #8b1f15;
  background-color: transparent;
}

.todo.list {
  display: flex;
  flex-direction: column;
  gap: 8px;
  padding: 18px 12px;
}

.todo.container {
  display: flex;
  gap: 16px;
  padding: 8px 12px;
  border-radius: 8px;
  background-color: #f0c987;
}

.todo.btn-panel {
  align-items: flex-start;
  margin-top: 6px;
}

.todo-panel {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  gap: 8px;
}

.expand-panel {
  display: flex;
  height: 100px;
}

.todo-noDesc-panel {
  display: flex;
  gap: 16px;
  height: 48px;
  align-items: center;
}

select,
textarea,
input {
  font-family: "Caveat";
  font-size: 1.5rem;
}

input.todo {
  border: none;
  outline: none;
}

input[type="checkbox"].todo {
  appearance: none;
  cursor: pointer;
  position: relative;
  background-color: white;
  box-shadow: 1px 1px 3px rgba(0, 0, 0, 40%);
  border-radius: 6px;
  height: 20px;
  width: 20px;
}

input[type="checkbox"].todo:checked:after {
  background-color: #3c153b;
  z-index: 1;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  content: "";
  height: 12px;
  width: 12px;
  border-radius: 4px;
}

input[type="checkbox"].todo:hover {
  box-shadow: 0 0 3px 3px rgb(255, 255, 255, 0.3);
  transition: all 0.25s linear;
}

select.todo.priority,
input[type="date"].todo,
input[type="text"].todo {
  color: black;
  border-radius: 8px;
  border: none;
  padding: 0 8px;
  height: 45px;
  box-shadow: 0 0 0 4px yellow inset;
}

input[type="text"].todo {
  margin-right: auto;
  width: 450px;
  text-overflow: ellipsis;
}

input[type="text"].todo:disabled {
  background-color: transparent;
  box-shadow: none;
}
/* ... */

